# importance-gradient

./: .gitignore  NOTICE.md  README-zh.md  README.md  examples_train_importance_gradient_ddp.py  pyproject.toml  requirements.txt
configs/: ds_config.json
docs/: paper_mapping.md  reproduce.md  upload_to_github_zh.md
experiments/rq1_workload_stability/: rq1_analyze_workload_stability_pythia.py  rq1_profile_workload_importance.py  rq1_profile_workload_importance_opt67b.py  rq1_profile_workload_importance_pythia.py  run_rq1_opt67b_workload_stability.sh  run_rq1_pythia_workload_stability.sh  run_rq1_workload_stability.sh
experiments/rq2_partition_ablation/: rq2_partition_ablation.py  run_rq2_partition_ablation.sh
experiments/rq3_release_frequency/: plot_rq3_frequency.py  rq3_frequency_ablation_driver.py  run_rq3_frequency_sweep.sh
experiments/rq4_packing_ablation/: rq4_summarize_packing.py  rq4_train_packing_ablation.py  run_rq4_packing_ablation.sh
experiments/rq5_adtopk_e2e/: rq5_adtopk_train_windowavg.py  run_rq5_adtopk_seed42_windowavg.sh  summarize_rq5_adtopk_windowavg.py
importance_gradient/: __init__.py  bucket_runtime_planner.py  component_mapper.py  metrics_schema.py  periodic_sync_gate.py  real_bucket_comm.py  release_policy.py
scripts/: run_group_allreduce_3seed_6000.sh  run_tests.sh
tests/: test_bucket_runtime_planner.py  test_component_mapper.py  test_release_policy.py
